<resources>
    <string name="app_name">Upcoming Movies</string>
    <string name="no_internet_connection">No internet connection found.</string>
    <string name="retry">Retry</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="name">Name</string>
    <string name="no_overview">No overview available</string>
    <string name="no_release_date">No Release date avalible</string>
    <string name="no_genre">No genre avalible</string>
    <string name="search">Search</string>
    <string name="poster_image">Movie poster image</string>
</resources>
