<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/title_text"
                android:id="@+id/textViewName"
                android:text="@string/app_name"/>

            <LinearLayout
                android:paddingTop="@dimen/activity_top_margin"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="250dp"
                    android:scaleType="fitCenter"
                    android:id="@+id/imageViewMoviePoster"
                    android:contentDescription="@string/poster_image" />

                <LinearLayout
                    android:paddingTop="@dimen/activity_top_margin"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryText" />

                        <TextView
                            android:text="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewReleaseDate"
                            android:textColor="@color/colorSecondaryText"/>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryText" />

                        <TextView
                            android:text="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewGenre"
                            android:textColor="@color/colorSecondaryText"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    style="@android:style/TextAppearance.Medium"/>

                <TextView
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewOverview"
                    android:textColor="@color/colorSecondaryText"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>